<resources>
    <string name="app_name">MyWeight</string>
    <string name="Register">登録</string>
    <string name="ReRoad">更新</string>
    <string name="Delete">削除</string>
    <string name="Result">検索結果</string>
    <string name="Weight">体重</string>
    <string name="Fat">体脂肪率</string>
    <string name="DashBoard">ダッシュボード</string>
    <string name="Home">ホーム画面</string>
    <string name="drawer_open">開く</string>
    <string name="drawer_close">閉じる</string>
    <string name="menu1">メニュー１</string>
    <string name="menu2">メニュー2</string>
    <string name="menu3">メニュー3</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>